k8s/docs-kevinryan-io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-kevinryan-io
  namespace: docs-kevinryan-io
spec:
  selector:
    app: docs-kevinryan-io
  ports:
    - port: 80
      targetPort: 8080
