k8s/docs-kevinryan-io/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-kevinryan-io
  namespace: docs-kevinryan-io
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.kevinryan.io`)
      kind: Rule
      services:
        - name: docs-kevinryan-io
          port: 80
  tls: {}
